--- a/index.html
+++ b/index.html
@@ -1634,7 +1634,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <b style="color: green">C. Des activités d'éducation et de conscientisation</b> consistant à sensibiliser l'opinion publique sur le HANDICAP et l'inclusion et l'importance pour les personnes différentes qui sont avant tout des humains d'être inclues dans leurs communautés.
     <br>
     <br>
-    <b style="color: green">D. Des activités liées aux journées d'excellence et de récompense</b> Sélection d'un-e étudiant-e handicapé-e comme bénéficiaire d'une bourse d'étude dénommée <b style="color: #ff0a06;">Bourse Tiki N'Yiki</b> basé sur des critères dont l'excellence et permettrait à la lauréate de s'inscrire dans une université de son choix. Les étudiant-es handicapé-es issu-es de familles à faibles revenus sont prioritaires (Condition Obligatoire).
+    <b style="color: green">D. Des activités liées aux journées d'excellence et de récompense</b> Sélection d'un-e étudiant-e handicapé-e comme bénéficiaire d'une bourse d'étude dénommée <b style="color: #ff0a06;">Bourse Tiki N'Yiki</b> dont les critères de sélection sont basés sur l'excellence entre autres et permettrait au récipiendaire de s'inscrire à un programme universitaire de son choix. Les étudiant-es handicapé-es issu-es de familles à faibles revenus sont prioritaires (Condition Obligatoire).
      </p>
     </div>
 
@@ -1675,14 +1675,14 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </span>
     
         <p>
-          <br>La santé est un droit universel et devrait être accessible à tout le monde. Par contre du fait de l'augmentation de la population mondiale et de l'augmentation de l'expérience de vie dans certains pays du fait des prouesses de la médécine, les systèmes de santé peinent en matières d'offres de services et sont remis en cause après la pandémie. 
-          L'état inégalitaire de l'existence de la main d'oeuvre impacte fondamentalement les différents systèmes de santé que ca soit au Nord ou au Sud. Les systèmes de couverture médicale gratuite assurée par certains états organisés n'arrivent plus à donner satisfaction aux populations pour certains cas et les attentes durent des mois voire des années. 
+          <br>La santé est un droit universel et doit être accessible à tout le monde. Par ailleurs avec l'augmentation de la population mondiale et de l'espérance de vie facilitée par les prouesses de la médécine, le fonctionnement des systèmes de santé sont sous pression pour plusieurs raisons: 
+          D'une part le manque de main d'oeuvre qualifiée dans l'hémisphère Nord et d'autre part le manque de main d'oeuvre qualifiée et d'équipements dans l'hémisphère Sud. Si bien que les services publics de santé sont débordés et certains patients doivent attendre pendant des mois voire des années pour des rendez-vous de chirurgie. 
           <br>
           <br>
-          Alors de plus en plus des patients se tournent vers le privé. Alors que privé rime avec assez de moyens financiers. Mais comment les personnes sans ou à faibles revenus pourront-elles accéder aux soins médicaux en cas de maladie ? Surtout quand la santé tend à devenir une affaire d'argent et que certaines personnes handicapées n'ont pas un grand pouvoir d'achat ? 
+          Il y a de plus en plus de patients qui se tournent vers le privé. Alors que privé rime avec pas mal assez de moyens financiers. Mais comment les personnes sans ou à faibles revenus pourront-elles accéder aux soins médicaux en cas de maladie ? Surtout quand la santé tend à devenir une affaire d'argent et que certaines personnes handicapées n'ont pas un grand pouvoir d'achat ? 
           <br>
           <br>
-          Ce point est très crucial. Il en va avec la santé et la vie. L'approche de Tiki N'Yiki  sera de créer divers partenariats très sûrs avec des hôpitaux, des médécins, d'agents soignant, d'infirmières afin de donner de leur expertise, leur temps pour conseiller, consulter et soigner des enfants handicapés malades bénéficiant du projet parce qu'elles n'ont pas<a href="https://www.hi.org/fr/pays/burkina-faso " target="_blank"> de couverture
+          Ce point est très crucial. Il en va avec la santé et la vie. L'approche de Tiki N'Yiki  sera de créer divers partenariats très sûrs avec des hôpitaux, des médécins, d'agents soignant, d'infirmières afin d'utiliser leur expertise et partager un temps pour conseiller, consulter et soigner de manière bénévole des enfants handicapés malades qui n'ont pas<a href="https://www.hi.org/fr/pays/burkina-faso " target="_blank"> de couverture
          médicale </a> en cas de maladie.
         </p>
       </div>
