--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #fff;
+                 background: -webkit-linear-gradient(#fbfafa 15%, rgba(199, 199, 199, 0.964) 85%);
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 4rem -10px rgba(65, 65, 65, 0.761);
+                 box-shadow: 0 -1px 4rem -10px rgba(71, 71, 71, 0.761);
                  border-top: 0.25rem solid #00aafffa;
           }
           
