--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#fbfafa 15%, rgba(211, 209, 209, 0.883) 85%);
+                 background: -webkit-linear-gradient(#f8f8f8 15%, rgba(214, 214, 214, 0.921) 85%);
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2.45rem -10px rgba(77, 77, 77, 0.761);
+                 box-shadow: 0 -1px 2.1rem -10px rgba(91, 91, 91, 0.761);
                  border-top: 0.25rem solid #00aafffa;
           }
           
