--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#f4f4f4 15%, rgba(209, 209, 209, 0.98) 85%);
+                 background: -webkit-linear-gradient(#eeeeeef5 15%, rgba(212, 212, 212, 0.999) 85%);
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2.5rem -10px rgba(222, 222, 222, 0.06);
+                 box-shadow: 0 -1px 2rem -10px rgba(253, 253, 253, 0.06);
                  border-top: 0.25rem solid #00aafffa;
           }
           
