--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#ecececf5 15%, rgba(212, 212, 212, 0.995) 85%);
+                 background: -webkit-linear-gradient(#efefef 15%, rgba(212, 212, 212, 0.995) 85%);
                  width: 100%;
                  height: 95px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2rem -10px rgba(159, 159, 159, 0.195);
+                 box-shadow: 0 -1px 2rem -10px rgba(168, 168, 168, 0.195);
                  border-top: 0.13rem solid #0099fffa;
           }
           
@@ -482,7 +482,7 @@ hr{
     justify-content: center;
     justify-items: center;
     background: rgba(248, 248, 248, 0.045);
-    width: 88%;
+    width: 83%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
@@ -490,6 +490,9 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.96;
+    border-left: 0.12rem solid rgba(176, 176, 176, 0.329);
+    border-right: 0.12rem solid rgba(176, 176, 176, 0.329);
+    margin-top: -0.7rem;
 }
 .content1 a:hover{
     color: red;
