--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#efefef 15%, rgba(212, 212, 212, 0.995) 85%);
+                 background: -webkit-linear-gradient(#f1f1f1 15%, rgba(216, 216, 216, 0.995) 85%);
                  width: 100%;
                  height: 95px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2rem -10px rgba(168, 168, 168, 0.195);
-                 border-top: 0.13rem solid #0099fffa;
+                 box-shadow: 0 -1px 2rem -10px rgba(183, 183, 183, 0.134);
+                
           }
           
 
