--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#f1f1f1 15%, rgba(210, 210, 210, 0.995) 85%);
+                 background: -webkit-linear-gradient(#f2f2f2fd 15%, rgba(203, 203, 203, 0.995) 85%);
                  width: 100%;
                  height: 95px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2rem -10px rgba(117, 117, 117, 0.201);
+                 box-shadow: 0 -1px 2rem -10px rgba(131, 131, 131, 0.33);
                 
           }
           
@@ -220,7 +220,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 157px; 
-            background: rgba(225, 225, 225, 0.581);
+            background: rgba(220, 220, 220, 0.535);
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
