--- a/index.html
+++ b/index.html
@@ -491,10 +491,8 @@ hr{
     font-size: 17.25px;
     text-align: left;
     padding-top: 5rem; 
-    opacity: 0.96;
-    border-left: 0.12rem solid rgba(176, 176, 176, 0.329);
-    border-right: 0.12rem solid rgba(176, 176, 176, 0.329);
-    margin-top: -0.7rem;
+    opacity: 0.98;
+    box-shadow: 0 0 1rem 0.2px #98989855;
 }
 .content1 a:hover{
     color: red;
@@ -1853,8 +1851,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 <div class="kpt">
                     <p>
                       
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel dit Gaby, une personne handicapée physique ayant étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
-                      Fervent défenseur des droits de personnes handicapées, il a travaillé pour plusieurs associations d'éducation, de défense et de sport pour ces personnes au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a>. Ainsi il a enseigné des enfants handicapés et orphelins, animé des séances de sensibilisation dont le thème constitue le handicap et l'inclusion sociale avec des enfants, des jeunes mais aussi avec des personnes du troisième âge.
+                      <br>
+                      <b style="color:rgb(0, 126, 222); font-family: helvetica; font-size: 13.5px;">
+                        La vision de Tiki N'Yiki a pour promoteur Gabriel une personne à mobilité physiquement réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
+                      Fervent défenseur des droits de personnes handicapées, il s'est engagé et travaillé pour plusieurs associations d'éducation dont l'association PAAS NEERE au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Il a enseigné des enfants handicapés et orphelins, animé des conférences et séances de sensibilisation autour du thème "handicap et inclusion sociale" avec des enfants, des jeunes mais aussi avec des personnes du troisième âge.
                       <br>
                       <br>
                        Gabriel apprend à coder pour mieux développer ce site web statique afin de présenter la vision de Tiki N'Yiki. 
@@ -1863,6 +1863,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       <br>
                       En 2017 il était obligé de s'exiler au Canada pour des raisons de sécurité. Présentement il est un résident permanent
                      Canadien et se reconstruit une nouvelle vie. Il veut créer une fondation pour continuer à soutenir les enfants handicapés au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a>
+                      </b>
                     </p>      
       </div>
 
