--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.98;
-    box-shadow: 0 0 1rem 0.2px #98989855;
+    box-shadow: 0 -2.5px 0.68rem 0 #1616163c;
 }
 .content1 a:hover{
     color: red;
