--- a/index.html
+++ b/index.html
@@ -78,17 +78,20 @@
   justify-content: center;
   justify-items: center;
   width: 100%;
-  color: #ff0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif; 
+  font-size: 16px; 
+  color: #2352a3f9;
 }
 
 .TEM:hover{
   background:-webkit-linear-gradient(rgba(223, 223, 2, 0.964) 30%,rgb(249, 249, 0) 70%) ;
   transition: 0.99s ease;
-  color: #ff0;
+  color: #00f;
   border-top-left-radius: 49%;
   border-bottom-left-radius: 49%;
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
+  font-family: 'arial black';
 }
     .Translator{
       display: flex;
@@ -1193,14 +1196,14 @@ function myFunction() {
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8RaX1EMvIv5A0vsX1ptakOpBMnvIuT2BSfg&usqp=CAU" alt="Disability Logo">
     </div>
 
-  <div class="TEM" style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; color: #2352a3f9;">
+  <div class="TEM">
   <b> Témoignage</b>
 </div>
 
   </div>
   </a>
 
-  <div style="display: grid; justify-content: center; justify-items: center; font-size: 27px; text-align: center; margin-top: 1rem;">
+  <div style="display: grid; justify-content: center; justify-items: center; color: #2d34b5; font-family: 'arial black'; font-size: 27px; text-align: center; margin-top: 1rem;">
   Bienvenue ! Ce site web est en développement. 
 <br>
   Merci pour votre compréhension ! Bonne Visite !</p>
