--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   justify-content: center;
   justify-items: center;
   width: 100%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif; 
-  font-size: 16px; 
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: 15px; 
   color: #2352a3f9;
 }
 
