--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     .DAH{
       display: grid; 
       grid-template-rows: 1fr 1fr;
-      justify-content: space-between;
+      justify-content: center;
       justify-items: center;
       width: 45%;
     }
@@ -73,25 +73,30 @@
 }
 
 .TEM{
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  position: relative;
+  flex-direction: column;
   justify-content: center;
-  justify-items: center;
+  align-items: center;
   width: 100%;
-  font-family: Arial, Helvetica, sans-serif; 
+  font-family: 'arial black';
   font-size: 15px; 
   color: #2352a3f9;
+  padding: 5px;
+  margin-top: -0.45rem;
 }
 
 .TEM:hover{
   background:-webkit-linear-gradient(rgba(223, 223, 2, 0.964) 30%,rgb(249, 249, 0) 70%) ;
-  transition: 0.99s ease;
+  transition: 0.6s ease;
   color: #00f;
   border-top-left-radius: 49%;
   border-bottom-left-radius: 49%;
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   font-family: 'arial black';
+  font-size: 15px; 
+  padding: 5px;
 }
     .Translator{
       display: flex;
@@ -186,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2rem -10px rgba(164, 164, 164, 0.19);
+                 box-shadow: 0 -1px 2.5rem -10px rgba(164, 164, 164, 0.19);
                 
           }
           
@@ -225,7 +230,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 157px; 
-            background: rgba(220, 220, 220, 0.535);
+            background: rgba(210, 210, 210, 0.462);
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
@@ -495,7 +500,7 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.98;
-    box-shadow: 0 -2.5px 0.68rem 0 #1616163c;
+    box-shadow: 0 -2.5px 0.68rem -1px #1e1e1e2e;
 }
 .content1 a:hover{
     color: red;
