--- a/index.html
+++ b/index.html
@@ -1686,7 +1686,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </span>
     
         <p>
-          <br>La santé est un droit universel et doit être accessible à tout le monde. Par ailleurs avec l'augmentation de la population mondiale et de l'espérance de vie facilitée par les prouesses de la médécine, le fonctionnement des systèmes de santé sont sous pression pour plusieurs raisons: 
+          <br>La santé est un droit universel et doit être accessible à tout le monde. Par ailleurs avec l'augmentation de la population mondiale et de l'espérance de vie facilitée par les prouesses de la médécine, le fonctionnement des systèmes de santé est sous pression pour plusieurs raisons: 
           D'une part le manque de main d'oeuvre qualifiée dans l'hémisphère Nord et d'autre part le manque de main d'oeuvre qualifiée et d'équipements dans l'hémisphère Sud. Si bien que les services publics de santé sont débordés et certains patients doivent attendre pendant des mois voire des années pour des rendez-vous de chirurgie. 
           <br>
           <br>
