--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,7 @@ function myFunction() {
       <div class="KRT">
                     <div>
                         <div style="text-align: center; padding: 3px; background: rgba(61, 173, 233, 0.935); color: #fff; font-family: 'verdana'; font-size: 15px;">
-                          Gabriel donne un de ses derniers cours avant de s'exiler au Canada pour des raison sécuritaire
+                          Gabriel dispense un de ses derniers cours au Burkina Faso
                         </div>
 
                         <div class="k1-image">
@@ -1312,7 +1312,7 @@ function myFunction() {
 
     <div>
       <div style="text-align: center; padding: 3px; background: rgba(61, 173, 233, 0.935); color: #fff; font-family: 'verdana'; font-size: 15px;">
-        Cours de soutien pour des écoliers en marge du projet "REVISONS NOS COURS" de Tiki N'Yiki
+        Cours de soutien pour des écoliers du quartier
       </div>
 
       <div class="k3-image">
