--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#f3f3f3fd 15%, rgba(202, 202, 202, 0.995) 85%);
+                 background: #fff;
                  width: 100%;
                  height: 90px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2.5rem -10px rgba(176, 176, 176, 0.125);
+                 box-shadow: 0 1px 9rem -2px rgba(52, 52, 52, 0.19);
                 
           }
           
@@ -229,7 +229,7 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 157px; 
+            height: 156px; 
             background: rgba(210, 210, 210, 0.462);
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
