--- a/index.html
+++ b/index.html
@@ -186,12 +186,13 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 90px;
+                 height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
                  box-shadow: 0 1px 9rem -2px rgba(87, 87, 87, 0.095);
+                 border-bottom: 0.5rem solid #01b2fee6;
                 
           }
           
@@ -213,7 +214,7 @@
   border: 0.1rem solid #dd346faa;
   color:darkblue;
   padding: 3px;
-  margin-top: -10px;
+  margin-top: -8.5px;
   margin-left: -2rem;
 }
 
