--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ animation: auto 12s infinite ease-in;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.963);
-    line-height: 25px;
+    line-height: 24.75px;
     padding: 10px;
     word-spacing: 1px;
 }
@@ -755,11 +755,11 @@ animation: auto 12s infinite ease-in;
 .kpt{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15.5px;
-  line-height: 23.2px;
-  color: rgba(0, 69, 187, 0.996);
+  line-height: 19px;
+  color: rgba(30, 84, 177, 0.92);
   word-spacing: 1.5px;
-  opacity: 0.93;
-  text-align: justify;
+  opacity: 0.98;
+  text-align: left;
 }
 
 .kgp{
@@ -799,7 +799,7 @@ animation: auto 12s infinite ease-in;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.963);
-    line-height: 25px;
+    line-height: 24.75px;
     word-spacing: 1px;
 }
 
