--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 1px 8rem -2px rgba(77, 77, 77, 0.127);
+                 box-shadow: 0 1px 8rem -2px rgba(87, 87, 87, 0.127);
                  border-bottom: 0.5rem solid #01b2fee6;  
           }
           
@@ -491,7 +491,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: rgba(248, 248, 248, 0.045);
+    background: #fff;
     width: 83%;
     height: auto;
     font-family: 'helvetica';
