--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 156px; 
+            height: 159px; 
             background: rgba(205, 205, 205, 0.409);
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -501,6 +501,7 @@ hr{
     padding-top: 5rem; 
     opacity: 0.98;
     box-shadow: 0 -3px 1.9rem -2px #17171728;
+    margin-top: -0.55rem;
 }
 .content1 a:hover{
     color: red;
