--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 1px 8rem -2px rgba(87, 87, 87, 0.127);
+                 box-shadow: 0 1px 3rem -2px #fafafa48;
                  border-bottom: 0.5rem solid #01b2fee6;  
           }
           
@@ -500,7 +500,7 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.98;
-    box-shadow: 0 -3px 1.9rem -2px #17171728;
+    box-shadow: 0 0 0.5rem 0 #0000003a;
     margin-top: -0.55rem;
 }
 .content1 a:hover{
