--- a/index.html
+++ b/index.html
@@ -500,8 +500,8 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.98;
-    box-shadow: 0 0 0.5rem 0 #0000003a;
-    margin-top: -0.55rem;
+    box-shadow: 0 2px 0.5rem 0 #2a2a2a5e;
+    margin-top: -0.54rem;
 }
 .content1 a:hover{
     color: red;
