--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 1px 3rem -2px #fafafa48;
-                 border-bottom: 0.5rem solid #01b2fee6;  
+                 border-bottom: 0.49rem solid #01bffeea;  
           }
           
 
@@ -500,8 +500,8 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.98;
-    box-shadow: 0 2px 0.5rem 0 #2a2a2a5e;
-    margin-top: -0.54rem;
+    box-shadow: 0 -0.9px 0.8rem -1.6px #3434343e;
+    margin-top: -0.55rem;
 }
 .content1 a:hover{
     color: red;
