--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 159px; 
-            background: rgba(205, 205, 205, 0.482);
+            background: #e4e4e4d9;;
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
@@ -462,7 +462,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #fefefeaa;
+    background: #e4e4e4d9;
     justify-content: center;
     align-items: center;
     padding: 10px;
@@ -1495,7 +1495,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
     </span>
     
   <p>
-    <br>Dans le domaine de l'éducation inclusive combien d'établissements specialisés sont construits pour faciliter les études des personnes handicapées ne pouvant pas s'inscrire et s'instruire dans les établissements dits ordinaires au Burkina Faso ? 
+    <br>Dans le domaine de l'éducation combien d'établissements specialisés sont construits pour faciliter les études des personnes handicapées ne pouvant pas s'inscrire et s'instruire dans les établissements dits ordinaires au Burkina Faso ? 
     <br>  
     Combien d'établissements scolaires et universitaires publics ou privés, d'espaces publics et administratifs, de lieux de culte, de centres d'achat, culturels ou sportifs sont equipés de rampes pour favoriser une meilleure accessibilité des personnes handicapées ? 
     <br>  
