--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ hr{
     justify-content: center;
     justify-items: center;
     background: #fff;
-    width: 88%;
+    width: 92.8%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
@@ -499,7 +499,7 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.98;
-    box-shadow: 0 -0.9px 0.8rem -1.6px #3434343e;
+    box-shadow: -1.6px -0.9px 0.8rem -1.6px #3434343e;
     margin-top: -0.55rem;
 }
 .content1 a:hover{
@@ -726,7 +726,7 @@ animation: auto 12s infinite ease-in;
     justify-items: left;
     justify-content: center;
     text-align: justify;
-    width: 73%;
+    width: 65%;
     height: auto;
     font-family:  'arial'; 
     font-size: 1.1rem; 
@@ -793,7 +793,7 @@ animation: auto 12s infinite ease-in;
     justify-items: left;
     justify-content: center;
     text-align: justify;
-    width: 100%;
+    width: 90%;
     height: auto;
     font-family:  'arial'; 
     font-size: 1.1rem; 
@@ -803,7 +803,7 @@ animation: auto 12s infinite ease-in;
 }
 
 .CRT2{
-  width: 100%;
+  width: 90%;
   display: grid;
   grid-template-columns: 0.8fr 1.5fr;
   column-gap: 2rem;
@@ -821,12 +821,12 @@ animation: auto 12s infinite ease-in;
   justify-content: left;
   align-items: center;
     height:auto;
-    width: 74% ; 
+    width: 65% ; 
     background: #fff;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif; 
-    font-size: 22.64px;
+    font-size: 1.1rem;
     color: rgba(28, 28, 28, 0.959);
-    line-height: 30px;
+    line-height: 24.75px;
     
 }
 
@@ -985,12 +985,12 @@ height: auto;
     justify-items: center;
     justify-content: center;
     text-align: justify;
-    width: 73.5%;
+    width: 65%;
     height: 790px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
-    line-height: 25px;
+    line-height: 24.75px;
 }
 
 .Healthy{
