--- a/index.html
+++ b/index.html
@@ -1860,7 +1860,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                     <p>
                       
                       <br>
-                      <b style="color:rgb(0, 126, 222); font-family: helvetica; font-size: 13.5px;">
+                      <b style="color:rgba(67, 67, 67, 0.946); font-family: helvetica; font-size: 13px;">
                         La vision de Tiki N'Yiki a pour promoteur Gabriel une personne à mobilité réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
                       Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé pour plusieurs associations d'éducation dont l'association PAAS NEERE au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Il a enseigné des enfants handicapés et orphelins, animé des conférences et séances de sensibilisation autour du thème "handicap et inclusion sociale" avec des enfants, des jeunes mais aussi avec des personnes du troisième âge.
                       <br>
