--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@ function myFunction() {
           <div class="YTY">  
             <img src="https://upload.wikimedia.org/wikipedia/commons/e/eb/Stephen_Hawking.StarChild.jpg" alt="Stephen Hawkings">
           <figure>
-            <figcation style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 15px; padding: 2px;">
+            <figcation style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 15px; padding: 2px; margin-top: -1rem;">
               Stephen Hawking
               </figcation>
             </figure>
