--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(13, 14, 14, 0.954);
+      color:  rgba(126, 126, 126, 0.72);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -124,7 +124,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(13, 14, 14, 0.954);
+      color:  rgba(126, 126, 126, 0.72);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -144,7 +144,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(13, 14, 14, 0.954);
+      color:  rgba(126, 126, 126, 0.72);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -164,7 +164,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(13, 14, 14, 0.954);
+      color:  rgba(126, 126, 126, 0.72);
       padding: 5px;
       margin-top: -0.5rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -183,15 +183,15 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #fff;
+                 background: #ffffff;
                  width: 100%;
-                 height: 100px;
+                 height: 101px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 1px 5rem -2px #f9f9f923;
-                 border-bottom: 0.5rem solid #01bbfef5;  
+                 box-shadow: 0 -1px 0.5rem 0.5px #ebf4f8a0;
+                 border-bottom: 4.88rem solid #04c0f9;  
           }
           
 
@@ -212,7 +212,7 @@
   border: 0.1rem solid #dd346faa;
   color:darkblue;
   padding: 3px;
-  margin-top: -7px;
+  margin-top: -2px;
   margin-left: -2rem;
 }
 
@@ -255,7 +255,7 @@
             font-size: 17px;
             height: 40px;
             width: 100%;
-            color: #676767e5;
+            color: rgba(0, 0, 70, 0.924);
             background: transparent;
             margin-top: 0.5rem;
           }
@@ -277,7 +277,7 @@
             font-size: 17px;
             height: 40px;
             width: 100%;
-            color: #676767e5;
+            color: rgba(0, 0, 70, 0.924);
             background: transparent;
             margin-top: 0.5rem;
           }
@@ -298,14 +298,14 @@
             font-size: 17px;
             height: 40px;
             width: 100%;
-            color: #676767e5;
+            color: rgba(0, 0, 70, 0.924);
             background: transparent;
             margin-top: 0.5rem;
             }
 
           .myDiv2:hover{
-            border-bottom: 0.8rem solid green;
-      color: green;
+            border-bottom: 0.8rem solid yellow;
+      color: yellow;
       transition: 0.22s ease-in;
           }
 
@@ -319,7 +319,7 @@
             font-size: 17px;
             height: 40px;
             width: 100%;
-            color: #676767e5;
+            color: rgba(0, 0, 70, 0.924);
             background: transparent;
             margin-top: 0.5rem;
            }
@@ -340,14 +340,14 @@
             font-size: 17px;
             height: 40px;
             width: 100%;
-            color: #676767e5;
+            color: rgba(0, 0, 70, 0.924);
             background: transparent;
             margin-top: 0.5rem;
             }
 
           .myDiv6:hover{
-            border-bottom: 0.8rem solid rgb(1, 189, 189);
-      color: rgb(1, 189, 189);
+            border-bottom: 0.8rem solid greenyellow;
+      color: greenyellow;
       transition: 0.22s ease-in;
           }
 
@@ -729,7 +729,7 @@ animation: auto 12s infinite ease-in;
     width: 65%;
     height: auto;
     font-family:  'arial'; 
-    font-size: 1.1rem; 
+    font-size: 1.05rem; 
     color: rgba(13, 13, 13, 0.963);
     line-height: 24.75px;
     padding: 10px;
@@ -796,7 +796,7 @@ animation: auto 12s infinite ease-in;
     width: 90%;
     height: auto;
     font-family:  'arial'; 
-    font-size: 1.1rem; 
+    font-size: 1.05rem; 
     color: rgba(13, 13, 13, 0.963);
     line-height: 24.75px;
     word-spacing: 1px;
@@ -824,7 +824,7 @@ animation: auto 12s infinite ease-in;
     width: 65% ; 
     background: #fff;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif; 
-    font-size: 1.1rem;
+    font-size: 1.05rem;
     color: rgba(28, 28, 28, 0.959);
     line-height: 24.75px;
     
@@ -972,9 +972,9 @@ height: auto;
   width: 100%;
   height: auto;
     font-family:  'arial'; 
-    font-size: 1.1rem; 
+    font-size: 1.05rem; 
     color: rgba(13, 13, 13, 0.866);
-    line-height: 25px;
+    line-height: 24.75px;
     text-align: justify;
 }
 
@@ -988,7 +988,7 @@ height: auto;
     width: 65%;
     height: 790px;
     font-family:  'arial'; 
-    font-size: 1.1rem; 
+    font-size: 1.05rem; 
     color: rgba(13, 13, 13, 0.866);
     line-height: 24.75px;
 }
@@ -1002,7 +1002,7 @@ height: auto;
   width: 100%;
   height: 240px;
   font-family:  'arial'; 
-  font-size: 1.1rem; 
+  font-size: 1.05rem; 
   color: rgba(13, 13, 13, 0.866);
   line-height: 25px;
 }
@@ -1022,6 +1022,7 @@ height: auto;
   width: 100%;
   height: auto;
   margin-top: 2rem;
+  font-size: 1.05rem;
 }
 
 .Avenue{
@@ -1426,7 +1427,7 @@ function myFunction() {
 Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barrières afin que toute personne handicapée puisse être mieux inclue, son droit respecté et sa vie facilitée sur un processus progressif et positif plûtot que la peur et les discriminations vécues par un grand nombre. 
 <br>
 <br>
-<em style="color:rgba(255, 1, 1, 0.996); font-size: 18px;">Les enfants handicapés doivent être bien encadrés afin de les frayer des chemins et les créér des opportunités.</em>
+<em style="color:rgba(255, 1, 1, 0.996); font-size: 18px;">Les enfants handicapés doivent être bien encadrés pour qu'ils puissent avoir des opportunités dans le futur.</em>
         </p>
       </div> 
 
