--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(126, 126, 126, 0.72);
+      color:  rgba(98, 98, 98, 0.717);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -124,7 +124,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(126, 126, 126, 0.72);
+      color:  rgba(98, 98, 98, 0.717);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -144,7 +144,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(126, 126, 126, 0.72);
+      color:  rgba(98, 98, 98, 0.717);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -164,7 +164,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(126, 126, 126, 0.72);
+      color:  rgba(98, 98, 98, 0.717);
       padding: 5px;
       margin-top: -0.5rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -191,7 +191,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 -1px 0.5rem 0.5px #ebf4f8a0;
-                 border-bottom: 4.88rem solid #04c0f9;  
+                 border-bottom: 4.84rem solid #00c3ff;  
           }
           
 
@@ -212,7 +212,7 @@
   border: 0.1rem solid #dd346faa;
   color:darkblue;
   padding: 3px;
-  margin-top: -2px;
+  margin-top: -1px;
   margin-left: -2rem;
 }
 
@@ -257,7 +257,7 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.5rem;
+            margin-top: 0.75rem;
           }
 
           .myDiv:hover{
@@ -279,7 +279,7 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.5rem;
+            margin-top: 0.75rem;
           }
 
           .myDiv1:hover{
@@ -300,7 +300,7 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.5rem;
+            margin-top: 0.75rem;
             }
 
           .myDiv2:hover{
@@ -321,7 +321,7 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.5rem;
+            margin-top: 0.75rem;
            }
 
           .myDiv3:hover{
@@ -342,7 +342,7 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.5rem;
+            margin-top: 0.75rem;
             }
 
           .myDiv6:hover{
