--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 -1px 0.5rem 0.5px #ebf4f8a0;
-                 border-bottom: 4.84rem solid #00c3ff;  
+                 border-bottom: 4.85rem solid #00bbff;  
           }
           
 
