--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(98, 98, 98, 0.717);
+      color:  rgba(79, 79, 79, 0.717);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -124,7 +124,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(98, 98, 98, 0.717);
+      color:  rgba(79, 79, 79, 0.717);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -144,7 +144,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(98, 98, 98, 0.717);
+      color:  rgba(79, 79, 79, 0.717);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -164,7 +164,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(98, 98, 98, 0.717);
+      color:  rgba(79, 79, 79, 0.717);
       padding: 5px;
       margin-top: -0.5rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -190,8 +190,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 0.5rem 0.5px #e5f7ffa0;
-                 border-bottom: 4.85rem solid #00bbff;  
+                 box-shadow: 0 -1px 2rem 0.2px #ffffff12;
+                 border-bottom: 4.88rem solid #01b3ff;  
           }
           
 
