--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(79, 79, 79, 0.717);
+      color:  rgba(255, 255, 255, 0.944);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-      font-size: 15px;
+      font-size: 14px;
     }
 
     .Translator:hover{
@@ -124,11 +124,11 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(79, 79, 79, 0.717);
+      color:  rgba(255, 255, 255, 0.944);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-      font-size: 15px;
+      font-size: 14px;
     }
 
     .Calculator:hover{
@@ -144,11 +144,11 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(79, 79, 79, 0.717);
+      color:  rgba(255, 255, 255, 0.944);
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-      font-size: 15px;
+      font-size: 14px;
     }
 
     .dico:hover{
@@ -164,9 +164,9 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  rgba(79, 79, 79, 0.717);
+      color:  rgba(255, 255, 255, 0.944);
       padding: 5px;
-      margin-top: -0.5rem;
+      margin-top: -0.65rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
       font-size: 13px;
     }
@@ -183,7 +183,7 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #ffffff;
+                 background: #131313;
                  width: 100%;
                  height: 101px;
                  object-fit: cover;
@@ -191,7 +191,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 -1px 2rem 0.2px #ffffff12;
-                 border-bottom: 4.88rem solid #01b3ff;  
+                 border-bottom: 4.88rem solid #01aaff;  
           }
           
 
@@ -229,7 +229,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 159px; 
-            background: #e4e4e4d9;;
+            background: #e4e4e4d9;
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
