--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  gold;
+      color:  #fff;
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -114,7 +114,7 @@
     .Translator:hover{
       transition: 0.2s ease-in;
       width: 100%;
-      color: #fff;
+      color: yellow;
     }
 
     .Calculator{
@@ -124,7 +124,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  gold;
+      color:  #fff;
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -134,7 +134,7 @@
     .Calculator:hover{
       transition: 0.2s ease-in;
       width: 100%;
-      color: #fff;
+      color: yellow;
     }
     
     .dico{
@@ -144,7 +144,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  gold;
+      color:  #fff;
       padding: 5px;
       margin-top: -1rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -154,7 +154,7 @@
     .dico:hover{
       transition: 0.2s ease-in;
       width: 100%;
-      color: #fff;
+      color: yellow;
     }
 
     .datime{
@@ -164,7 +164,7 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      color:  gold;
+      color:  #fff;
       padding: 5px;
       margin-top: -0.65rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -174,7 +174,7 @@
     .datime:hover{
       transition: 0.2s ease-in;
       width: 100%;
-      color: #fff;
+      color: yellow;
     }
 
     
