--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 -1px 2rem 0.2px #ffffff12;
-                 border-bottom: 4.88rem solid #01aaff;  
+                 border-bottom: 4.88rem solid #04bcff;  
           }
           
 
