--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #131313;
+                 background: #1d1d1d;
                  width: 100%;
                  height: 101px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2rem 0.2px #ffffff12;
-                 border-bottom: 4.88rem solid #04bcff;  
+                 box-shadow: 0 -1px 2rem 0.2px #ffffff07;
+                 border-bottom: 4.9rem solid #04c0ff;  
           }
           
 
@@ -474,7 +474,7 @@ hr{
    
 }
 ::-webkit-scrollbar-track-piece{
-    background: rgba(145, 145, 145, 0.768);
+    background: rgba(167, 167, 167, 0.768);
     padding: 10px;
 }
 ::-webkit-scrollbar-thumb{
@@ -499,7 +499,7 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.98;
-    box-shadow: -1.6px -0.9px 0.8rem -1.6px #3434343e;
+    box-shadow: -0.9px -0.9px 0.8rem -1.6px #0b0b0b69;
     margin-top: -0.55rem;
 }
 .content1 a:hover{
@@ -628,7 +628,7 @@ opacity: 1;
   width: 72%;
   height: 524;
   border: 0.11rem solid rgba(203, 203, 203, 0.876); 
-  margin-top: 3.5rem;
+  margin-top: 3.85rem;
 }
 
 .k-image{
