--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 -1px 2rem 0.2px #ffffff07;
-                 border-bottom: 4.9rem solid #04c0ff;  
+                 border-bottom: 4.9rem solid #07c8f8;  
           }
           
 
@@ -379,7 +379,7 @@
 .footer{
         display: flex;
         width: 100%;
-        height: 425px;
+        height: 420px;
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
