--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 -1px 2rem 0.2px #ffffff07;
-                 border-bottom: 4.9rem solid #07c8f8;  
+                 border-bottom: 4.9rem solid #07d4f8;  
           }
           
 
@@ -726,7 +726,7 @@ animation: auto 12s infinite ease-in;
     justify-items: left;
     justify-content: center;
     text-align: justify;
-    width: 65%;
+    width: 66%;
     height: auto;
     font-family:  'arial'; 
     font-size: 1.05rem; 
