--- a/index.html
+++ b/index.html
@@ -1704,19 +1704,19 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <div class="Healthy">
         
         <div >
-          <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-            CHR de Ziniare
+            Logo médical
             </figcaption>
     </figure>
     </div>
   
     <div >
-    <img src="https://www.zupimages.net/up/23/06/hx80.png" alt="Emergency Montreal Hospital">
+    <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Emergency Montreal Hospital">
     <figure>
       <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-        CHUM de Montreal
+        Centre Hospitalier Régional de Ziniaré
         </figcaption>
 </figure>
 
