--- a/index.html
+++ b/index.html
@@ -1863,15 +1863,15 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       <br>
                     
                         La vision de Tiki N'Yiki a pour promoteur Gabriel une personne à mobilité réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
-                      Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé pour plusieurs associations d'éducation dont l'association PAAS NEERE au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Il a enseigné des enfants handicapés et orphelins, animé des conférences et séances de sensibilisation autour du thème "handicap et inclusion sociale" avec des enfants, des jeunes mais aussi avec des personnes du troisième âge.
+                      Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé pour plusieurs associations d'éducation comme l'association PAAS NEERE dont il fut un des membres fondateurs à Ziniare au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Il a enseigné des enfants handicapés et orphelins, animé des conférences et séances de sensibilisation autour du thème "handicap et inclusion sociale" avec des enfants, des jeunes et aussi avec des personnes du troisième âge.
                       <br>
                       <br>
                        Gabriel apprend les languages informatiques pour mieux développer ce site web afin de présenter la vision de Tiki N'Yiki. 
-                      Il est aussi un passionné de photographie, de lecture, d'histoire, de géographie, d'architecture et de hockey. 
+                      Il est aussi un passionné de photographie, de lecture, d'histoire, de géographie, d'architecture, de football (soccer) et de hockey sur glace. 
                       <br>
                       <br>
-                      En 2017 il était obligé de s'exiler au Canada pour des raisons de sécurité si bien que certaines acitivités de Tiki N'Yiki ont cessé. Présentement résident permanent
-                     Canadien il se reconstruit une nouvelle vie. Néanmoins Gabriel veut créer une fondation pour continuer à soutenir les enfants handicapés pour leur donner des chances de rencontrer des opportunités dans leur vie et mieux s'intégrer dans les communautés au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a>
+                      En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki ont cessé et vont être redéfinies. Présentement résident permanent
+                     Canadien il se reconstruit une nouvelle vie. Néanmoins Gabriel veut créer une fondation pour continuer à soutenir les enfants handicapés pour leur donner des chances d'avoir des opportunités afin de mieux s'intégrer dans leurs communautés respectives au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a>
                      
                     </p>      
       </div>
