--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 .footer{
         display: flex;
         width: 100%;
-        height: 420px;
+        height: 440px;
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
@@ -880,6 +880,8 @@ animation: auto 12s infinite ease-in;
     border-top: 1rem;
     border-radius: 1rem;
     text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .SPan:hover{
     background:green;
@@ -1863,7 +1865,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       <br>
                     
                         La vision de Tiki N'Yiki a pour promoteur Gabriel une personne à mobilité réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
-                      Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé pour plusieurs associations d'éducation comme l'association PAAS NEERE dont il fut un des membres fondateurs à Ziniare au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Il a enseigné des enfants handicapés et orphelins, animé des conférences et séances de sensibilisation autour du thème "handicap et inclusion sociale" avec des enfants, des jeunes et aussi avec des personnes du troisième âge.
+                      Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé pour plusieurs associations d'éducation comme l'association PAAS NEERE dont il fut un des membres fondateurs à Ziniare.</a> Il a enseigné des enfants handicapés et orphelins, animé des conférences et séances de sensibilisation autour du thème "handicap et inclusion sociale" avec des enfants, des jeunes et aussi avec des personnes du troisième âge au Burkina Faso, en Suisse et en Allemagne.
+                      <br>
+                      En 2012, Gabriel a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour sa contribution au développement et l'épanouissement des personnes handicapées de sa localité.
                       <br>
                       <br>
                        Gabriel apprend les languages informatiques pour mieux développer ce site web afin de présenter la vision de Tiki N'Yiki. 
