--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ hr{
     justify-content: center;
     justify-items: center;
     background: #fff;
-    width: 91.65%;
+    width: 91.99%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
@@ -499,8 +499,7 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.98;
-   
-    margin-top: -0.55rem;
+    margin-top: -0.6rem;
 }
 .content1 a:hover{
     color: red;
@@ -1690,7 +1689,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     
         <p>
           <br>La santé est un droit universel et doit être accessible à tout le monde. Par ailleurs avec l'augmentation de la population mondiale et de l'espérance de vie facilitée par les prouesses de la médécine, le fonctionnement des systèmes de santé est sous pression pour plusieurs raisons: 
-          D'une part le manque de main d'oeuvre qualifiée dans l'hémisphère Nord et d'autre part le manque de main d'oeuvre qualifiée et d'équipements dans l'hémisphère Sud. Si bien que les services publics de santé sont débordés et certains patients doivent attendre pendant des mois voire des années pour des rendez-vous de chirurgie. 
+          D'une part le manque de main d'oeuvre qualifiée dans l'hémisphère Nord et d'autre part le manque d'infrastructures et d'équipements dans l'hémisphère Sud. Si bien que les services publics de santé sont débordés et certains patients doivent attendre pendant des mois voire des années pour des rendez-vous de chirurgie. 
           <br>
           <br>
           Il y a de plus en plus de patients qui se tournent vers le privé. Alors que privé rime avec pas mal assez de moyens financiers. Mais comment les personnes sans ou à faibles revenus pourront-elles accéder aux soins médicaux en cas de maladie ? Surtout quand la santé tend à devenir une affaire d'argent et que certaines personnes handicapées n'ont pas un grand pouvoir d'achat ? 
