--- a/index.html
+++ b/index.html
@@ -1367,8 +1367,8 @@ function myFunction() {
            
             <div class="CRT1">
             
-        Le Burkina Faso est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de 
-        <em style="color: rgb(0, 145, 255)">274.300 kilomètres carrés avec une population de 22.1 millions d'habitants. Le Burkina Faso partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin. 
+        Le Burkina Faso ou pays des hommes intègres est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de 
+        <em style="color: rgb(0, 145, 255)">274.300 kilomètres carrés avec une population de 22.100.683 habitants <a href="https://data.worldbank.org/indicator/SP.POP.TOTL?locations=BF" target="_blank"> [Sources: Banque Mondiale]</a>. Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin. 
           <br> 
         </em>  Il bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage.
         Heureusement elle se diversifie à travers d'autres secteurs comme les services et le secteur des nouvelles technologies. 
