--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@ function myFunction() {
         <br> 
         <br> 
         Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe aux discriminations et barrières sociales,
-        mais aussi par un manque substantiel de légifération sur le handicap, les droits et les devoirs corollaires. 
+        mais aussi par une insuffisance de légifération et une mise en application de lois par rapport au handicap, les droits et les devoirs corollaires. 
        Et cela rend très difficile la vie des personnes handicapées qui doivent perpétuellement lutter pour avoir quelques droits basiques.  
         
         </div>
@@ -1421,7 +1421,7 @@ function myFunction() {
         <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'acceptation et d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré la différence mais en jouissant de leurs droits.
          
          <br>
-         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe du fait de la négligence, de l'exclusion dont elles sont victimes. Si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il est très difficile de rencontrer des opportunités. 
+         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe du fait de la négligence, de l'exclusion dont elles sont victimes. Si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il sera très difficile de rencontrer des opportunités. 
          Le fait que des gens qui devraient être les premiers à être soutenus, se retrouvent complètement oubliés et relégués aux rangs derniers, est non seulement une erreur sociale mais indique l'état des mentalités, l'environnement peu inclusif par rapport à la différence. 
 <br>
 <br>
@@ -1467,7 +1467,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 </span>
   <p>
     <br>
-    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de sévères discriminations au quotidien.
+    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de sévères discriminations au quotidien <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" target="_blank"> </a> .
     <br>  
     <br>
     Sinon pourquoi des personnes handicapées dépendantes et vivant isolées sont oubliées quand on doit leur apporter à manger ou à boire, les faire prendre un bain ou leur apporter un besoin quelconque ?
@@ -1551,7 +1551,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </div>
       </div>
         En étant handicapés, pouvoir loger et étudier au centre Tiki N'Yiki établi en ville sera synonyme de proximité d'importants services comme l'hôpital, les lieux de culte, les centres d'achat, les lieux de sport, de divertissement. 
-        Au déla de cette vie en ville, la discrimination va s'amoindrir vis-àvis de la vie en campagne ou l'inclusion est très balbutiante voire inexistante. 
+        Au déla de cette vie en ville, la discrimination va s'amoindrir vis-à-vis de la vie en campagne ou l'inclusion est très balbutiante voire inexistante. 
         <br>
         <br>
         Nous connaissons tous l'importance de l'éducation comme un puissant outil pour tout humain. En effet le but premier de Tiki N'Yiki est de permettre aux enfants handicapés d'accéder à une bonne éducation et avoir des opportunities dont ils méritent malgré leur handicap. 
