--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@ function myFunction() {
         <br> 
         <br> 
         Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe aux discriminations et barrières sociales,
-        mais aussi par une insuffisance de légifération et une mise en application de lois par rapport au handicap, les droits et les devoirs corollaires. 
+        mais aussi par une insuffisance de légifération et une mise en application des lois par rapport au handicap, les droits et les devoirs corollaires. 
        Et cela rend très difficile la vie des personnes handicapées qui doivent perpétuellement lutter pour avoir quelques droits basiques.  
         
         </div>
@@ -1467,7 +1467,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 </span>
   <p>
     <br>
-    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de sévères discriminations au quotidien <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" target="_blank"> </a> .
+    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" target="_blank">sévères discriminations au quotidien </a>.
     <br>  
     <br>
     Sinon pourquoi des personnes handicapées dépendantes et vivant isolées sont oubliées quand on doit leur apporter à manger ou à boire, les faire prendre un bain ou leur apporter un besoin quelconque ?
