--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 -1px 2rem 0.2px #ffffff07;
-                 border-bottom: 4.9rem solid #07d4f8;  
+                 border-bottom: 4.9rem solid #0ab9ff;  
           }
           
 
@@ -478,8 +478,8 @@ hr{
     padding: 10px;
 }
 ::-webkit-scrollbar-thumb{
-    background: rgb(126, 126, 126);
-    width: 5px;
+    background: -webkit-linear-gradient(#0ab9ff 40%, orangered 50%);
+    width: 10px;
     height: 20px;
     border-radius: 1rem;
     justify-self: center;
