--- a/index.html
+++ b/index.html
@@ -475,13 +475,15 @@ hr{
 }
 ::-webkit-scrollbar-track-piece{
     background: rgba(162, 162, 162, 0.868);
-    padding: 10px;
+    width: auto;
+    padding: 20px;
 }
 ::-webkit-scrollbar-thumb{
-    background: -webkit-linear-gradient(#0ab9ff 40%, orangered 50%);
-    width: 10px;
-    height: 20px;
-    border-radius: 1rem;
+    background: -webkit-linear-gradient(#0ab9ff 50%, orangered 50%);
+    width: 12px;
+    height: 30px;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
     justify-self: center;
 }
 
